INCLUDES = -I$(top_srcdir)/include/ -I$(top_srcdir)/dclog
METASOURCES = AUTO
bin_PROGRAMS = nvtest2
nvtest2_SOURCES = nvtest2.c
LDADD = $(SOM)/libgrapes.a $(top_builddir)/dclog/libdclog.a $(top_builddir)/common/libcommon.a $(top_builddir)/ml/libml.a $(top_builddir)/rep/librep.a $(top_builddir)/monl/libmon.a -lm -lstdc++
